some conditions.

Increased maximum number of open files in rcontrib to the system upper
limit of 2048 rather than the default 512 under Windows.

Added top-level resources directory with files from Rob Guglielmetti.

Improved accuracy for peaky BSDFs and small light sources.

Fixed issue with pmapdump noted by Axel Jacobs.

Improved accuracy of bsdf2ttree when converting scattering interpolation
representatons with strong peaks.

Tweaked peak-extraction code to work more reliably.

Georg Mischler updated SCons build system.

Rob Guglielmetti and Alex Swindler updated CMake build system.

Modified pcomb so the first view seen in the inputs is written into header.

Wrote rtpict script to run rtrace in parallel mode and simulate rpict with
-n option.

Added ability to move forwards/backwards specified distance in rvu "origin"
command.  Feature requested by John Mardaljevic, who essentially owns this
command, now.

Reduced bias in ambient super-sampling method.

Fixed bugs associated with zero transmission in chromatic tensor trees.
Thanks to Lars Grobe for pointing out issues.

Added RAYPATH searching for -f options to genrev, gensurf, genworm,
bsdf2klems, bsdf2ttree, and pcomb.  This makes behavior consistent
with rcalc, calc, and rendering tools.

Worked with Randolph Fritz to fix some issues with ies2rad and newer
IESNA63 standards.

Resurrected original bsdf2rad test program, renaming it bsdf2rado. Still an
optional build in src/cv/.

Fixed bug in rcontrib with virtual sources, where pretest was adding
to modifier accumulation buffers.  Reported by Mostapha.

Added an "aBSDF" material type that explicitly checks for peak extraction.
Its arguments are the same as the original "BSDF" type, but without the
thickness parameter, as proxy geometry is not supported by this new type.
The old "BSDF" type no longer does peak extraction under any circumstances,
since this behavior is superfluous for proxied geometry.